--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,6 +5,6 @@
     [cta]="servicesSection.cta"></app-services-section>
   <app-projects-accordion></app-projects-accordion>
   <app-mission-section></app-mission-section>
-  <app-contact [leadParagraphs]="contactSection.leadParagraphs"></app-contact>
+  <app-cta-contact [leadParagraphs]="contactSection.leadParagraphs"></app-cta-contact>
   <app-cta-section></app-cta-section>
 </div>
