--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -116,7 +116,7 @@
       class="bg-scheme-background rounded-button whitespace-nowrap transition-all duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-scheme-border text-scheme-text px-5 py-2"
       title="Demander un devis" i18n-title="navbar.link.offer|Navbar primary link@@navLinkOffer:Offres"
       [routerLink]="'/offer'" (click)="isMobile && closeMobileMenu()">
-      <span i18n="navbar.link.offer|Navbar primary link@@navLinkOffer:Offres">Offres</span>
+      <span i18n="navbar.link.offer|Navbar primary link@@navLinkOfferSpan:Offres">Offres</span>
     </button>
 
     <button type="button"
