--- a/src/app/features/offer/offer.component.html
+++ b/src/app/features/offer/offer.component.html
@@ -1,7 +1,7 @@
-<app-hero-section [title]="hero.title" [description]="hero.description" [actions]="hero.actions"
-  titleLevel="h1"></app-hero-section>
+<app-hero-section [title]="hero.title" [description]="hero.description" [actions]="hero.actions" titleLevel="h1"
+  align="left"></app-hero-section>
 
-<section id="services" class="px-[5%] py-12 md:py-18 lg:py-22">
+<section id="services" class="px-[5%] py-12 md:py-18 lg:py-22" data-testid="services-section">
   <div class="container space-y-12 lg:space-y-16">
     @for (service of services; track service.id) {
     <div class="relative border-t border-border-primary bg-neutral-white pb-8 md:pb-14 lg:sticky lg:pb-0"
@@ -14,7 +14,7 @@
         <div class="grid grid-cols-1 gap-y-12 md:items-center md:gap-x-12 lg:grid-cols-2 lg:gap-x-20">
           <div>
             <p class="mb-3 font-semibold md:mb-4">{{ service.category }}</p>
-            <h2 class="rb-5 mb-5 text-5xl font-bold md:mb-6 md:text-7xl lg:text-8xl" i18n="@@offerServiceHeading">
+            <h2 class="font-heading heading-h3 text-h3 mb-5 md:mb-6" i18n="@@offerServiceHeading">
               {{ service.heading }}
             </h2>
             <p class="md:text-md">{{ service.description }}</p>
@@ -45,7 +45,7 @@
 
 
 
-<section id="qualities" class="px-[5%] py-12 md:py-18 lg:py-22">
+<section id="qualities" class="px-[5%] py-12 md:py-18 lg:py-22" data-testid="qualities-section">
   <div class="container space-y-12 lg:space-y-16">
     @for (quality of qualities; track quality.id) {
     <div class="relative border-t border-border-primary bg-neutral-white pb-8 md:pb-14 lg:sticky lg:pb-0"
@@ -58,7 +58,7 @@
         <div class="grid grid-cols-1 gap-y-12 md:items-center md:gap-x-12 lg:grid-cols-2 lg:gap-x-20">
           <div>
             <p class="mb-3 font-semibold md:mb-4">{{ quality.category }}</p>
-            <h2 class="rb-5 mb-5 text-5xl font-bold md:mb-6 md:text-7xl lg:text-8xl" i18n="@@offerQualityHeading">
+            <h2 class="font-heading heading-h3 text-h3 mb-5 md:mb-6" i18n="@@offerQualityHeading">
               {{ quality.heading }}
             </h2>
             <p class="md:text-md">{{ quality.description }}</p>
@@ -86,6 +86,8 @@
     }
   </div>
 </section>
+
+<app-cta-contact [leadParagraphs]="contactSection.leadParagraphs"></app-cta-contact>
 
 <app-cta-block [title]="callToAction.title" [description]="callToAction.description" [actions]="callToAction.actions"
   [bordered]="true"></app-cta-block>
