update front picture and ui

--- a/src/app/shared/components/cta-contact/cta-contact.component.html
+++ b/src/app/shared/components/cta-contact/cta-contact.component.html
@@ -43,7 +43,8 @@
     <a [href]="map.href" target="_blank" class="justify-self-end md:w-[321.6px] lg:w-auto"
       aria-label="Voir l'emplacement sur la carte dans un nouvel onglet"
       i18n-aria-label="contact.map.linkAria|Map link label@@contactMapLinkAria">
-      <img [src]="map.imageSrc" [alt]="map.alt" class="size-full h-[250px] object-cover md:h-[516px]" loading="lazy" />
+      <img [src]="map.imageSrc" [alt]="map.alt"
+        class="shadow-xl overflow-hidden rounded-image size-full h-[250px] object-cover md:h-[516px]" loading="lazy" />
     </a>
   </div>
 </section>
