update metadate, seo, and sitemaps

--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -8,7 +8,7 @@
       <div class="mb-6 md:mb-8">
         <p class="mb-3 font-semibold md:mb-4">{{ contactInfo.label }}</p>
         <h2 class="mb-5 heading-h2 text-h2 md:mb-6" i18n="@@contactFormHeading">
-          {{ contactInfo.heading }}
+          Formulaire de contact
         </h2>
         <p class="md:text-md">{{ contactInfo.description }}</p>
       </div>
