--- a/src/app/features/client-project/client-project.component.html
+++ b/src/app/features/client-project/client-project.component.html
@@ -14,7 +14,7 @@
       @if (project.actions?.length) {
       <div class="mt-6 flex flex-wrap items-center justify-center gap-4 md:mt-8">
         @for (action of project.actions; track $index) {
-        <a [routerLink]="action.href"
+        <a href="{{ action.href }}"
           class="rounded-2xl button px-5 py-2 text-sm font-semibold transition-colors duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
           [ngClass]="{
                   'bg-background-secondary text-black border border-border-primary': action.variant === 'secondary',
